src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Days_from_First_Demo_to_Unqual_Close__c</fullName>
        <formula>IF(OR(ISBLANK(Lost_Unqual_Date__c),ISBLANK(First_Demo_Date__c)),NULL,Lost_Unqual_Date__c-First_Demo_Date__c)</formula>
        <label>Days from First Demo to Unqual/Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DealRegq10__c</fullName>
        <description>WI Deal Reg Question (Lead)</description>
        <label>Current Storage Vendor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealRegq12__c</fullName>
        <description>WI Deal Reg Question - Lead</description>
        <label>How did the Reseller find this deal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealRegq13__c</fullName>
        <description>WI Deal Reg Question - Lead</description>
        <label>Other Solutions Customer is Evaluating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Reg_Approval_date__c</fullName>
        <description>share with WI Partner</description>
        <label>Deal Reg Approval date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Reg_Expired_date__c</fullName>
        <description>Shared with WI Partner</description>
        <label>Deal Reg Expired date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Review_Rev_Rec_Notes__c</fullName>
        <description>for Finance Revenue Recognition only</description>
        <label>Deal Review Rev Rec Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deal_Type_Checked_by_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deal Type must be checked by an AVP or Bus Driver</description>
        <label>Deal Type Checked by Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_Type_Last_Modified_By__c</fullName>
        <description>Stamped by Workflow rule</description>
        <label>Deal Type Last Modified By</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Type_Last_Modified_Date__c</fullName>
        <label>Deal Type Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <description>Deal type for Registrations</description>
        <inlineHelpText>Deal type for Registrations. Select &quot;Direct&quot; if this deal does not have any partner involvement.</inlineHelpText>
        <label>Deal Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Deal_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_structure__c</fullName>
        <inlineHelpText>indicates whether an opportunity is being closed direct or through channel</inlineHelpText>
        <label>Deal Structure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Channel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decision_Criteria__c</fullName>
        <description>Technical &amp; commercial criteria, their priority and our position v the competition</description>
        <inlineHelpText>Technical &amp; business criteria, their priority, and our position versus the competition</inlineHelpText>
        <label>Decision Criteria (D)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Decision_Making_Process__c</fullName>
        <inlineHelpText>Sequence of events in the decision making process</inlineHelpText>
        <label>Decision Making Process</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Decision_Process__c</fullName>
        <description>The process by which the customer will evaluate, select and purchase a solution.</description>
        <inlineHelpText>The process by which the customer will evaluate, select and purchase a solution.</inlineHelpText>
        <label>Decision Process (D)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Delivery_Location_TAM_RE__c</fullName>
        <description>City, State, Country</description>
        <inlineHelpText>City, State, Country</inlineHelpText>
        <label>Delivery Location (TAM/RE)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demo_Count__c</fullName>
        <label>Demo Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deployed_in_Customer_Environment_Date__c</fullName>
        <description>Date when Turbonomic was deployed in Customer Environment, Stamped by workflow rule when Deployed in Customer Environment is set to true.</description>
        <label>CWOM Deployed in Cust Environment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deployed_in_Customer_Environment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of Cisco Deal Tracking</description>
        <label>CWOM Deployed in Customer Environment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Desired_Percent_Virtualized__c</fullName>
        <label>Desired Percent VirtualizedOLD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Desired_VM_Density__c</fullName>
        <inlineHelpText>Fill in the number of VMs that the customer would like to have per host on average</inlineHelpText>
        <label>Desired VM DensityOLD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Desired_of_Operators__c</fullName>
        <label>Desired # of OperatorsOLD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Determined_Services_Amount__c</fullName>
        <description>Calculated dollar amount based on determined services on opportunity</description>
        <formula>CASE( TEXT(Determined_Services__c) ,
&quot;RAPID&quot;, 12500,
&quot;EXPAND&quot;, 25000,
&quot;ASSURE&quot;, 80000,
&quot;MANAGE&quot;, 150000,
&quot;PLAN&quot;, 25000,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Determined Services Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Determined_Services__c</fullName>
        <inlineHelpText>The services you decide to include in your deal. Refer to the Suggested Services field in the Opp Stats Section for a suggestion based on your opportunity deal size.</inlineHelpText>
        <label>Determined Services</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RAPID</fullName>
                </value>
                <value>
                    <fullName>EXPAND</fullName>
                </value>
                <value>
                    <fullName>ASSURE</fullName>
                </value>
                <value>
                    <fullName>MANAGE</fullName>
                </value>
                <value>
                    <fullName>PLAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DiPalma_Q4_Eligible_Deals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DiPalma Q4 Eligible Deals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disqualified_Alternatives_Status_Quo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The alternative solutions to the Executive Sponsor’s value driver have been disqualified, including business as usual</inlineHelpText>
        <label>DQ&apos;d Alternatives &amp; Status Quo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <label>Distributor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arrow</fullName>
                </value>
                <value>
                    <fullName>BigTec</fullName>
                </value>
                <value>
                    <fullName>Lifeboat</fullName>
                </value>
                <value>
                    <fullName>No Distributor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_we_have_a_rock_solid_ROI__c</fullName>
        <inlineHelpText>5: Yes, and the C-Level signed off on the numbers
4: Yes, SVP signed off
3: Yes, larger group/committee signed off
2: Yes, technical champion signed off
1: Have not presented ROI</inlineHelpText>
        <label>Do we have a rock-solid [R]OI?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EJF_Bet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EJF Bet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EOS_Type__c</fullName>
        <label>EOS Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>EOS – Windows</fullName>
                </value>
                <value>
                    <fullName>EOS – SQL</fullName>
                </value>
                <value>
                    <fullName>EOS – Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>E_Staff_Notes__c</fullName>
        <label>E-Staff Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Economic_Buyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The individual who is required for the final “yes.”</description>
        <inlineHelpText>The individual who is required for the final “yes.”</inlineHelpText>
        <label>Economic Buyer (E)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Economic Buyer)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Update_Stamp_Apex__c</fullName>
        <defaultValue>&quot;ZZZ&quot;</defaultValue>
        <description>Replacement for Email Update Stamp (set in Opportunity Methods Class rather than through workflow)</description>
        <label>Email Update Stamp (Apex)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Update_Stamp__c</fullName>
        <defaultValue>&quot;ZZZ&quot;</defaultValue>
        <label>Email Update Stamp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engaged_Cloud_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Partner related field</description>
        <label>Engaged Cloud Rep</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <value>00157000025uKaT</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Engaged Cloud Rep)</relationshipLabel>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Engaged_with_Cisco_Rep_Date__c</fullName>
        <description>Stamped by Workflow when Engaged with Cisco Rep on Deployment checkbox is set to true</description>
        <label>Engaged with Cisco Rep Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engaged_with_Cisco_Rep_on_Deployment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of the Cisco Deal Tracking</description>
        <label>Engaged with Cisco Rep on Deployment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engineer_Assigned__c</fullName>
        <label>Engineer Assigned</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Engineer_Assigned</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EnvironmentTools__c</fullName>
        <inlineHelpText>What tools are they currently using?</inlineHelpText>
        <label>Environment/Tools</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Services_Amount__c</fullName>
        <description>Field to be filled out by Garth and Client Services to outline the estimated/forecasted amount for services</description>
        <label>Forecasted Services Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Eval_Completion_Date__c</fullName>
        <label>Eval Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eval_Criteria_Documented_Last_Updated__c</fullName>
        <label>Map Strat Init 2 Tech Req Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eval_Length_if_completed__c</fullName>
        <description>Days between eval start and eval complete</description>
        <formula>IF(OR(ISBLANK(Eval_Start_Date__c),ISBLANK(Eval_Completion_Date__c)),NULL,Eval_Completion_Date__c-Eval_Start_Date__c)</formula>
        <label>Eval Length (if completed)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eval_Notes__c</fullName>
        <label>POV Reqs &amp; Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Eval_Period_Concluded_Last_Updated__c</fullName>
        <label>Eval Period Concluded Date Stamp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eval_Period_Concluded__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The evaluation has ended (different from tech win).</inlineHelpText>
        <label>POV Eval Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eval_Start_Date_2__c</fullName>
        <formula>Eval_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eval Start Date (2)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eval_Start_Date_Bucket__c</fullName>
        <formula>IF( X1_if_Eval_Started__c =1,
(YEAR(TODAY())-YEAR(Eval_Start_Date__c))*12
+
(MONTH(TODAY()) - MONTH(Eval_Start_Date__c)),
-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eval Start Date Bucket</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eval_Start_Date__c</fullName>
        <label>Eval Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eval_Started__c</fullName>
        <formula>if( ISBLANK( Eval_Start_Date__c ) ,&quot;FALSE&quot;,&quot;TRUE&quot;)</formula>
        <label>Eval Started</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eval_to_Close_Projected__c</fullName>
        <formula>MAX(IF(OR(ISBLANK(Eval_Start_Date__c),TEXT(Type)=&quot;Renewal&quot;),NULL, 
IF(TEXT(StageName)=&quot;Closed Won&quot;,CloseDate-Eval_Start_Date__c, 
IF(OR(TEXT(StageName)=&quot;Closed Lost&quot;,TEXT(StageName)=&quot;Unqualified&quot;),Lost_Unqual_Date__c-Eval_Start_Date__c, 
CloseDate-Eval_Start_Date__c))),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eval to Close (Projected)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Evaluation_Meeting_Count__c</fullName>
        <label>Evaluation Meeting Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Auto_Unqualify__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Excludes this opportunity from the Auto-Unqualify batch for opportunities in Identify longer than 90 days.</description>
        <inlineHelpText>Exclude this opportunity from being auto-unqualified if it stays in Identify for longer than 90 days.</inlineHelpText>
        <label>Exclude from Auto Unqualify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Renewal_Rate_Calculation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For Finance use only</inlineHelpText>
        <label>Exclude from Renewal Rate Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_from_opp_reports__c</fullName>
        <formula>IF(AND(TEXT(Type)=&quot;Upsell&quot;,TEXT(Revenue_Type__c)=&quot;Managed Services&quot;),&quot;Exclude&quot;,&quot;Include&quot;)</formula>
        <label>Exclude from opp reports</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exec_Buy_In_on_BIP_Last_Updated__c</fullName>
        <label>BIP Endorsed by Buyer Date Stamp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exec_Buy_In_on_BIP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>STRONG UPSIDE REQ: Executive Sponsor has bought in to the business case, as illustrated in BIP.</inlineHelpText>
        <label>EB Approves BIP and Move Forward</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exec_Email_Alert_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exec Email Alert Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exec_Email_Switch__c</fullName>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exec Email Switch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exec_Engagement2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exec Engagement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exec_Engagement__c</fullName>
        <formula>IF(
AND(NOT(ISPICKVAL(StageName,&quot;Closed Won&quot;)),NOT(ISPICKVAL(StageName,&quot;Unqualified&quot;)),NOT(ISPICKVAL(StageName,&quot;Closed Lost&quot;)))
,Account.Exec_Engagement__c,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exec Engagement (Account)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exec_Sponsor_Need_Timing_Last_Updated__c</fullName>
        <label>Business Initiative Confirmed Date Stamp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exec_Sponsor_Need_Timing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Strategic Initiatives Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exec_Sponsors_Eval_Criteria_Documented__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Map EB Strategic Initiatives 2 Tech Reqs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Turbo Executive Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Executive_Summary__c</fullName>
        <description>Note Field for Exec Summary (Requested by Eric)</description>
        <label>Executive Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_License_Value__c</fullName>
        <description>Should be in USD</description>
        <inlineHelpText>Please put the amount in USD</inlineHelpText>
        <label>Expected Upfront License Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_PBOs_Metrics__c</fullName>
        <inlineHelpText>What are the customer&apos;s expected positive business outcomes (PBO) they should be directly tied to Metrics (M) that you have identified in the MEDDICC section?</inlineHelpText>
        <label>Expected PBOs &amp; Metrics</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Probability__c</fullName>
        <formula>Case(   StageName , &apos;Identified&apos;, 0, &apos;Pipeline&apos;, 0, &apos;Closed Lost&apos;, 0, &apos;Unqualified&apos;, 0, &apos;Upside&apos;, 0.25, &apos;Strong Upside&apos;, 0.5, &apos;Commit&apos;, 0.9, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expected_Revenue_Type__c</fullName>
        <inlineHelpText>This field is to help with revenue forecasting.  If you don’t know for sure which item to choose, use your best guess based on discussions with the customer.</inlineHelpText>
        <label>Expected Revenue Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Perm with 1-2 Years Maintenance</fullName>
                </value>
                <value>
                    <fullName>Perm with 2+ Years Maintenance</fullName>
                </value>
                <value>
                    <fullName>Perm Combined with Term License Items</fullName>
                </value>
                <value>
                    <fullName>Term</fullName>
                </value>
                <value>
                    <fullName>Training/Services Only</fullName>
                </value>
                <value>
                    <fullName>Maintenance Only</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Revenue__c</fullName>
        <formula>if (  Expected_Probability__c &lt; 0.9,   
      min(Amount , 100000) *   Expected_Probability__c, 
      Amount  *   Expected_Probability__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expiration__c</fullName>
        <formula>CloseDate +  Terms__c  * 31</formula>
        <label>Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finance_Notes_from_Account__c</fullName>
        <formula>Account.Finance_Notes__c</formula>
        <label>Finance Notes (from Account)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Demo_Contact_Safe_ID__c</fullName>
        <label>First Demo Contact Safe ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Demo_Date__c</fullName>
        <label>First Demo Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Demo_Period_For_TVs__c</fullName>
        <formula>IF(  First_Demo_Date__c  =TODAY(),1, 
IF(First_Demo_Date__c &gt;=TODAY()-MOD(TODAY()-DATE(1900, 1, 7), 7),2, 
IF(First_Demo_Date__c &gt;=DATE(YEAR(TODAY()),MONTH(TODAY()),1),3, 
IF(FLOOR(( 13 - IF( MONTH( First_Demo_Date__c)=1, MONTH( First_Demo_Date__c) + 12, MONTH( First_Demo_Date__c))) / 3 )= FLOOR(( 13 - IF( MONTH( TODAY())=1, MONTH( TODAY()) + 12, MONTH( TODAY()))) / 3 ),4, 
5))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Demo Period For TVs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Discovery_Call_Date__c</fullName>
        <label>First Discovery Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Evaluation_Meeting_Date__c</fullName>
        <label>First Evaluation Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_On_Site_Meeting__c</fullName>
        <description>First On-Site Meeting as stamped by the BatchUpdateTaskOthers Method</description>
        <label>First On-Site Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Socket_Automation_Date__c</fullName>
        <label>First Socket Automation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flagged_for_Unqualification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flagged for Unqualification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Focus_Account__c</fullName>
        <formula>Account.Focus_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Focus Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>For_Conversion_Analysis__c</fullName>
        <formula>IF(NOT(ISBLANK(Opportunity_ID_Date__c)),

IF(TEXT(StageName)=&quot;Closed Won&quot;,&quot;(a) Hit Pipe - Closed Won&quot;,
IF(OR(TEXT(StageName)=&quot;Closed Lost&quot;,TEXT(StageName)=&quot;Unqualified&quot;),&quot;(c) Hit Pipe - Lost&quot;,&quot;(b) Hit Pipe - Still Open&quot;)),

IF(TEXT(StageName)=&quot;Identify&quot;,&quot;(d) Still in Identify&quot;,
&quot;(e) Never Hit Pipe - Qualed Out&quot;))</formula>
        <label>For Conversion Analysis</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Opportunity_2__c</fullName>
        <label>Forecast Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Forecast</fullName>
                </value>
                <value>
                    <fullName>Best Case</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forecast_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forecast OpportunityOLD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forecast_Renewal_Rate__c</fullName>
        <description>Forecasted Renewal amount for CX opps. Requested for use in Gainsight.</description>
        <formula>Forecasted_Bookings_Editable__c/Undiscounted_Renewal_Amount__c</formula>
        <label>Forecast Renewal Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecasted_Bookings_Editable_EMEA__c</fullName>
        <formula>IF(Owner_Team_Group_Buckets__c = &quot;EMEA Velocity&quot;, 
CASE(StageName,
&quot;Pipeline&quot;,0.2* MIN(75000,Amount),
&quot;Upside&quot;,0.4*MIN(75000,Amount), 
&quot;Strong Upside&quot;,0.6*MIN(75000,Amount), 
&quot;Commit&quot;,0.95*MIN(75000,Amount), 
&quot;PO received&quot;,Amount, 
&quot;Closed Won&quot;,Amount, 
0), 

CASE(StageName,
&quot;Pipeline&quot;,0.15*MIN(250000,Amount), 
&quot;Upside&quot;,0.35*MIN(250000,Amount), 
&quot;Strong Upside&quot;,0.5*MIN(250000,Amount), 
&quot;Commit&quot;,0.95*Amount, 
&quot;PO received&quot;,Amount, 
&quot;Closed Won&quot;,Amount, 
0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecasted Bookings (Editable) EMEA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_Bookings_Editable__c</fullName>
        <description>For use in the Brain.  Lets you change the amount cap and weightings quarter-to-quarter without changing the other Forecasted Bookings field</description>
        <formula>IF(TEXT(Type)=&quot;Quota&quot;,Amount,

IF(TEXT(Type)=&quot;Maintenance Renewal&quot;,
CASE(StageName, 
&quot;Renewal&quot;,0.9,
&quot;Identify&quot;,0.2,
&quot;Pipeline&quot;,0.4,
&quot;Upside&quot;,0.8,
&quot;Strong Upside&quot;,0.8,
&quot;Commit&quot;,0.95,
&quot;PO received&quot;,1,
&quot;Closed Won&quot;,1,
0)*Max_Potential_Opportunity_Amount__c,
 
IF(AND(NOT(CONTAINS(TEXT(Owner_Team__c),&quot;Enterprise&quot;)),NOT(CONTAINS(TEXT(Owner_Team__c),&quot;Global&quot;))),
CASE(StageName, 
&quot;Upside&quot;,0.25*MIN(100000,Amount),
&quot;Strong Upside&quot;,0.5*MIN(100000,Amount),
&quot;Commit&quot;,0.9*Amount,
&quot;PO received&quot;,0.99*Amount,
&quot;Closed Won&quot;,Amount,
0),
 
CASE(StageName, 
&quot;Upside&quot;,0.5*MIN(250000,Amount),
&quot;Strong Upside&quot;,0.75*MIN(250000,Amount),
&quot;Commit&quot;,0.9*Amount,
&quot;PO received&quot;,0.99*Amount,
&quot;Closed Won&quot;,Amount,
0))))</formula>
        <label>Forecasted Bookings (Editable)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_Bookings__c</fullName>
        <formula>IF(ISBLANK(Amount),NULL,
IF(TEXT(Type)=&quot;Maintenance Renewal&quot;, 
CASE(StageName, 
&quot;Closed Lost&quot;,0, 
&quot;Renewal&quot;,0.9, 
&quot;Identify&quot;,0.2, 
&quot;Pipeline&quot;,0.4,
&quot;Upside&quot;,0.8, 
&quot;Commit&quot;,0.95, 
&quot;PO received&quot;,1, 
&quot;Closed Won&quot;,1, 
0)*Amount,
IF(ISPICKVAL(Type,&quot;Quota&quot;), Amount, 
IF(OR(TEXT(StageName)=&quot;Closed Won&quot;,TEXT(StageName)=&quot;PO received&quot;,TEXT(StageName)=&quot;Commit&quot;), Amount*Probability,MIN(100000,Amount)*Probability))))</formula>
        <label>Forecasted Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_Custom_Integration_Amount__c</fullName>
        <description>Field to be filled out by Garth and Client Services to outline the estimated/forecasted amount for Custom Integrations</description>
        <label>Forecasted Custom Integration Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_PM_Amount__c</fullName>
        <description>Field to be filled out by Garth and Client Services to outline the estimated/forecasted amount for Project Management</description>
        <inlineHelpText>Forecast of Project Management services - by Client Services team</inlineHelpText>
        <label>Forecasted PM Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_Revenue__c</fullName>
        <formula>IF(ISBLANK(Amount),NULL,

IF(TEXT(Type)=&quot;Maintenance Renewal&quot;,
CASE(StageName,
&quot;Identify&quot;,0.2*Amount,
&quot;Renewal&quot;,0.85*Amount, 
&quot;Pipeline&quot;,0.90*Amount,
&quot;Commit&quot;,0.95*Amount,
&quot;PO received&quot;,Amount,
0),

CASE(StageName,   
&quot;Pipeline&quot;,0*MIN(150000,Amount),
&quot;Upside&quot;,0.2*MIN(150000,Amount),
&quot;Strong Upside&quot;,0.4*MIN(150000,Amount),
&quot;Commit&quot;,0.95*Amount,
&quot;PO received&quot;,Amount,
0)))</formula>
        <label>Forecasted Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_TAM_Amount__c</fullName>
        <description>Field to be filled out by Garth and Client Services to outline the estimated/forecasted amount for TAM</description>
        <label>Forecasted TAM Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_Training_Amount__c</fullName>
        <description>Field to be filled out by Garth and Client Services to outline the estimated/forecasted amount for Training</description>
        <label>Forecasted Training Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funding_Approved_Last_Updated__c</fullName>
        <label>Funding Approved Date Stamp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Terms Approved by Finance</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>